# differential_equations_solver

./: .gitignore  CMakeLists.txt  DifferentialEquationSolvers.hpp  Dockerfile  Matrix.hpp  README.md  bootstrap.sh  build_and_run_tests.sh  copy_includes.sh  docker_image_name.txt  prepare_image.sh
tests/: DiffEquationsSeminarioTest.cpp  DiffEquationsSolverTest.cpp  Matrix2DTest.cpp
